docs(api): add docs for DELETE /token;
