# docs/openapi.yaml
@@ -74,6 +74,23 @@ paths:
               example: 479f879a-db6d-47e9-a094-124cd0ad648f
         '403':
           description: Forbidden invalid username and/or password
+  /token/{username}:
+    delete:
+      tags:
+      - tokens
+      summary: Delete all login tokens for a given user
+      description: |-
+        Delete all login tokens for a given user
+
+        Requires: `TokenDelete` permission to delete another users tokens, but you are free to delete your own
+      operationId: token_delete
+      parameters:
+      - name: username
+        in: path
+        required: true
+        schema:
+          type: string
+      responses: {}
 components:
   schemas:
     DangerousLogin:
